src/styles/styles.css
/* vars */
:root {
  --main-font: "Tahoma", sans-serif;
  --main-black: #000;
  --main-white: rgb(236, 236, 236);
  --color-1: #adadad;
  --color-2: #005791;
  --color-3: rgba(76, 76, 77, 0.315);
  --text-1: #616161;
  --text-2: #e4e4e4;
}

/* global */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

body {
  font-weight: 400;
  font-family: var(--main-font);
  font-size: 16px;
  line-height: 1.7;
  color: var(--text-1);
  padding-bottom: 2rem;
  background-color: var(--color-1);
}

a:link,
a:visited {
  color: var(--color-2);
  text-decoration: none;
}

a:hover,
a:active {
  color: var(--color-1);
}

button {
  background-color: transparent;
  border: none;
}

span {
  display: inline !important;
}

/* main  */
.main {
  height: 100%;
  width: 75%;
  margin: 0 auto;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 30px;
  /* overflow: hidden; */
}

.user-position {
  display: flex;
  justify-content: center;
}

/* wrapper */
.wrapper {
  margin-right: auto;
  margin-left: auto;
  height: 100%;
  max-width: 950px;
}

/* header */
.header {
  text-align: center;
  border: transparent;
  background-color: var(--color-2);
  padding: 2rem 3rem;
}

.header-title {
  font-weight: 300;
  color: white;
  letter-spacing: 0.8px;
}

/* content */
.content {
  background-color: white;
  width: 100%;
  /* height: 100vh; */
  padding: 0rem 3rem;
}

/* error */
.error {
  margin-top: 3rem;
  text-align: center;
}

/* weather-data */
.weather-tagline {
  padding-top: 1rem;
  letter-spacing: 0.7px;
}

.weather-data {
  text-align: center;
  background-color: var(--main-white);
}

.weather-data-city {
  color: black;
}

.weather-data-box {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 1rem;
}

.hourly-weather-data-box {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: 1rem;
  /* height: 100px; */
}

.weather-data-property {
  margin: 0rem 2rem;
}

.weather-data-title {
  font-size: 0.8rem;
  text-transform: uppercase;
  font-weight: 600;
  letter-spacing: 1px;
}

.weather-data-value {
  color: var(--color-2);
  font-size: 2rem;
  line-height: 1;
  padding: 0.5rem;
  margin-bottom: 1rem;
}

/* weather search */
.tagline {
  font-size: 1.5rem;
  text-align: center;
  margin-bottom: 1rem;
  letter-spacing: 0.5px;
}

.tagline-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
}

.weather-search {
  display: flex;
  flex: 1;
  align-items: center;
  justify-content: center;
}

.weather-search-form {
  text-align: center;
  margin-top: 1rem;
  margin-bottom: 3rem;
}

.weather-search-input {
  display: inline-block;
  border: solid 2px transparent;
  background-color: rgba(145, 191, 212, 0.3);
  padding: 1rem 0rem;
  border-radius: 5px;
  margin-right: 2rem;
  padding-left: 1rem;
  padding-right: 3rem;
  margin-left: -1rem;
}

.weather-search-input:focus {
  outline: none;
  border-bottom: solid 2px rgb(54, 54, 54);
}

.weather-search-submit {
  display: inline-block;
  text-align: center;
  background-color: transparent;
  font-size: 3rem;
  height: 30px;
  width: 10px;
  position: relative;
  top: 0.9rem;
  margin-left: -4rem;
}

.weather-search-button {
  padding: 1.2rem;
  color: var(--color-2);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 2rem;
}

.weather-search-button:focus {
  outline: none;
}

/* footer */
.footer {
  position: absolute;
  font-size: small;
  bottom: 0;
  padding: 1rem 0;
  left: 50%;
  text-align: center;
  transform: translateX(-50%);
  border-top: solid 1px rgba(0, 0, 0, 0.3);
  letter-spacing: 0.3px;
}

